search: Better fix for options alignment

--- a/user-interface/src/main/angular/projects/labbcat-view/src/app/search/search.component.css
+++ b/user-interface/src/main/angular/projects/labbcat-view/src/app/search/search.component.css
@@ -108,7 +108,7 @@ details[open] > div {
     content: ':';
 }
 .list {
-    margin: unset;
+    width: 100%;
     margin-top: 5px;
 }
 .list-label {
